<resources>
    <string name="app_name">Books</string>

    <!-- LogInFragment -->
    <string name="greeting_text">Hello my friend!\n You can login or continue as a guest</string>
    <string name="greeting_login_button_text">Log in</string>
    <string name="greeting_guest_button_text">Guest</string>

    <!-- AddLinkDialog -->
    <string name="add_link_email_hint">Email</string>
    <string name="add_link_password_hint">Password</string>
    <string name="add_link_password_again">Password again</string>
    <string name="add_link_cancel_text">CANCEL</string>
    <string name="add_link_text">LINK</string>
    <string name="add_account_title">Add account</string>
    <string name="add_link_error_passwords">Passwords don\'t match</string>
    <string name="add_link_error_empty_fields">This field couldn\'t be empty</string>

    <!-- NavDrawerHeader -->
    <string name="nav_header_login_btn_text">Login</string>
    <string name="nav_header_logout_btn_text">Logout</string>
    <string name="nav_header_link_btn_text">Link</string>
    <string name="title_book_categories">Book categories</string>
    <string name="title_chart">Chart</string>
    <string name="title_all_books">All books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_group">Other</string>
    <string name="write_to_developer">Write to developer</string>
    <string name="nav_header_error_snackbar_text">Please try again!</string>
    <string name="nav_header_correct_snackbar_text">You are linked!</string>


    <!-- AddBookFragment -->
    <string name="add_book_section_for_read">FOR READ</string>
    <string name="add_book_section_reading">READING</string>
    <string name="add_book_section_read">READ</string>
    <string name="add_book_hint_author_first_name">READ</string>

    <!-- add_book_main_part -->
    <string name="add_book_main_part_book_name_hint">Book name</string>
    <string name="add_book_main_part_author_first_hint">Author first name</string>
    <string name="add_book_main_part_author_second_hint">Author second name</string>
    <string name="add_book_main_part_author_patronymic_hint">Author patronymic</string>
    <string name="add_book_main_part_add_author_btn_text">Add author</string>

    <!-- add_book_category_part -->
    <string name="add_book_category_part_category_hint">Category</string>
    <string name="add_book_category_part_btn_text">Add</string>
    <string name="add_book_category_part_spinner_title_text">Category</string>
    <string name="add_book_category_part_divider_margin_spinner_section_text">Section</string>

    <!-- add_book_date_part -->
    <string name="add_book_date_part_start_date_hint">Start date</string>
    <string name="add_book_date_part_end_date_hint">End date</string>
    <string name="date_picker_clear_button_text">Clear</string>

    <!-- add_book_other_part -->
    <string name="add_book_other_part_page_count_hint">Page count</string>
    <string name="add_book_other_part_repeat_count_hint">Repeat count</string>


</resources>
