<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/add_link_linear_margin"
    android:orientation="vertical"
    android:padding="@dimen/add_link_linear_padding">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addEmailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_link_email_hint"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_link_password_hint"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addPasswordAgainTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addPasswordAgainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_link_password_again"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_link_linear_button_margin_top"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/add_link_cancel_margin_end"
            android:background="@drawable/button_circle_border_accent_enable"
            android:text="@string/add_link_cancel_text"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/saveLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_circle_border_accent_enable"
            android:text="@string/add_link_text"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>