<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/loginScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/greeting_margin_top"
            android:gravity="center"
            android:text="@string/greeting_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/greeting_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/greeting_linear_layout_margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/greeting_login_button_margin_end"
                android:background="@drawable/button_circle_border_accent_enable"
                android:text="@string/greeting_login_button_text"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/guestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_circle_border_accent_enable"
                android:text="@string/greeting_guest_button_text"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/anonymProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
